--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="description" content="Ledu, to raise funds, attract attention, raise awareness for equitable quality education. " />
+        <meta name="author" content="Monk On Mars, Lo Yen Xuan, Ng Zhe Xuan, Wong Zhen Lam" />
     <title>Grayscale - Start Bootstrap Theme</title>
     <link rel="icon" type="image/x-icon" href="static/assets/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
@@ -23,7 +23,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="#page-top">Lorem Ipsum</a>
+            <a class="navbar-brand" href="#page-top">Ledu</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -47,7 +47,7 @@
                     {% if username %}
                     <h1 class="text-white-50 mx-auto my-0 text-uppercase">Welcome {{ username }}!!</h1>
                     {% else %}
-                    <h1 class="text-white-50 mx-auto my-0 text-uppercase">Grayscale</h1>
+                    <h1 class="text-white-50 mx-auto my-0 text-uppercase">Ledu</h1>
                     {% endif %}
                     <h2 class="text-white-50 mx-auto mt-2 mb-5">A free, responsive, one page Bootstrap theme created by
                         Start Bootstrap.</h2>
@@ -65,10 +65,9 @@
                         alt="..." /></div>
                 <div class="col-xl-4 col-lg-5">
                     <div class="featured-text text-center text-lg-left">
-                        <h4>Shoreline</h4>
-                        <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use
-                            it for any project - even commercial projects! Download it, customize it, and publish your
-                            website!</p>
+                        <h4>Ledu</h4>
+                        <p class="text-black-50 mb-0">Ledu is an initiative to promote equitable quality education with the contribution from the awareness of the public.</p>
+                      
                     </div>
                 </div>
             </div>
@@ -79,9 +78,9 @@
                     <div class="bg-black text-center h-100 project">
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-center text-lg-left">
-                                <h4 class="text-white">Misty</h4>
-                                <p class="mb-0 text-white-50">An example of where you can put an image of a project, or
-                                    anything else, along with a description.</p>
+                                <h4 class="text-white">Global Education Crisis</h4>
+                                <p class="mb-0 text-white-50">The global education system is in disarray. Millions of youngsters, particularly those from low-income families, are unable to attend school. Many more people go to school, but they are not taught fundamental reading and math abilities.</p>
+                                   
                                 <hr class="d-none d-lg-block mb-0 ms-0" />
                             </div>
                         </div>
@@ -95,10 +94,8 @@
                     <div class="bg-black text-center h-100 project">
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-center text-lg-right">
-                                <h4 class="text-white">Mountains</h4>
-                                <p class="mb-0 text-white-50">Another example of a project with its respective
-                                    description. These sections work well responsively as well, try this theme on a
-                                    small screen!</p>
+                                <h4 class="text-white">Insufficient funds to provide Equality Education</h4>
+                                <p class="mb-0 text-white-50">Do you know? Over 200 million children will still be out of school in 2030. Can you imagine that happening in the 21st century? Furthermore, foreign education financing is decreasing. </p>
                                 <hr class="d-none d-lg-block mb-0 me-0" />
                             </div>
                         </div>
@@ -118,7 +115,7 @@
                         {% else %}
                         <section class="forms-section">
                             {% endif %}
-                            <h1 class="section-title">Sign Up to Contribute!</h1>
+                            <h1 class="section-title">Sign Up & Play to Contribute!</h1>
                             <div class="forms">
                                 <div class="form-wrapper is-active">
                                     <button type="button" class="switcher switcher-login">
@@ -187,7 +184,7 @@
                             <i class="fas fa-map-marked-alt text-primary mb-2"></i>
                             <h4 class="text-uppercase m-0">Address</h4>
                             <hr class="my-4 mx-auto" />
-                            <div class="small text-black-50">4923 Market Street, Orlando FL</div>
+                            <div class="small text-black-50">4923 Subang Jaya, Selangor, Malaysia</div>
                         </div>
                     </div>
                 </div>
@@ -197,7 +194,7 @@
                             <i class="fas fa-envelope text-primary mb-2"></i>
                             <h4 class="text-uppercase m-0">Email</h4>
                             <hr class="my-4 mx-auto" />
-                            <div class="small text-black-50"><a href="#!">hello@yourdomain.com</a></div>
+                            <div class="small text-black-50"><a href="mailto:ngzhexuan2@gmail.com">ngzhexuan2@gmail.com</a></div>
                         </div>
                     </div>
                 </div>
@@ -207,15 +204,14 @@
                             <i class="fas fa-mobile-alt text-primary mb-2"></i>
                             <h4 class="text-uppercase m-0">Phone</h4>
                             <hr class="my-4 mx-auto" />
-                            <div class="small text-black-50">+1 (555) 902-8832</div>
+                            <div class="small text-black-50">+60 888 8888</div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="social d-flex justify-content-center">
-                <a class="mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                <a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                <a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
+                <a class="mx-2" href="https://monkonmars.github.io/Monk-on-Mars/"><i class="fab fa-facebook-f"></i></a>
+                <a class="mx-2" href="https://github.com/MonkOnMars"><i class="fab fa-github"></i></a>
             </div>
         </div>
     </section>
