a lot of stuff going on i just push it in case of something happen

--- a/server/templates/market.html
+++ b/server/templates/market.html
@@ -2,17 +2,48 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>Ledu</title>
+    <link rel="icon" type="image/x-icon" href="static/assets/favicon.ico" />
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
+    <link
+        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+        rel="stylesheet" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="static/css/market.css" rel="stylesheet" />
 </head>
 
 <body>
-    {% for course in courseListing %}
-    <p>Course name: {{ course["course_name"]}}</p>
-    <p>Current Funds: {{ course["currency"] }} {{ course["current_available_funds"] }}</p>
-    <p>How much people are also funded: {{ course["funding_people_count"] }}</p>
-    {% endfor %}
+    <div id="wrapper">
+        <h1>Current Funds</h1>
+
+
+        <table id="keywords" cellspacing="0" cellpadding="0">
+            <thead>
+                <tr>
+                    <th><span>Course Name</span></th>
+                    <th><span>Current Funds</span></th>
+                    <th><span>People Funded</span></th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for course in courseListing %}
+                <tr>
+                    <td>{{ course["course_name"]}}</td>
+                    <td>{{ course["current_available_funds"] }}</td>
+                    <td>{{ course["funding_people_count"] }}</td>
+                </tr>
+                {% endfor %}
+
+            </tbody>
+        </table>
+    </div>
 </body>
 
 </html>
